--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+
 :root {
     --secondary: #DC7000;
     --accent: #F5F5F5;
@@ -10,7 +12,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    list-style: none;
+    font-family: 'Poppins', sans-serif;
 }
 
 .pre{
@@ -28,8 +30,7 @@ nav{
 }
 
 nav .menu ul{
-    display: flex;
-    list-style: none;
+    display: flex;;
     gap: 50px;
     align-items: center;
 }
@@ -48,6 +49,24 @@ nav .menu ul > *{
 .menu ul li a:hover{
     border-bottom: 1px solid var(--white);
 }
+
+ul.custom-discs li {
+    list-style-type: none;
+    position: relative;
+    padding-left: 15px;
+}
+  
+ul.custom-discs li::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    height: 10px;
+    width: 10px;
+    background-color: white;
+    border-radius: 50%;
+}  
 
 ul > .contact-button{
     background-color: white;
@@ -311,6 +330,10 @@ section{
     display: flex;
     flex-direction: column;
     gap: 30px;
+}
+
+.footer ul{
+    list-style: none;
 }
 
 .subscription{
