--- a/style.css
+++ b/style.css
@@ -19,64 +19,6 @@
     white-space: pre-line;
 }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 50px;
-    background-color: var(--secondary);
-    color: var(--white);
-    height: 80px;
-}
-
-nav .menu ul{
-    display: flex;;
-    gap: 50px;
-    align-items: center;
-}
-
-nav .menu ul > *{
-    cursor: pointer;
-}
-
-.menu ul li a{
-    text-decoration: none;
-    color: var(--white);
-    border-bottom: 1px solid transparent;
-    transition: border-bottom ease-in 0.15s;
-}
-
-.menu ul li a:hover{
-    border-bottom: 1px solid var(--white);
-}
-
-ul.custom-discs li {
-    list-style-type: none;
-    position: relative;
-    padding-left: 15px;
-}
-  
-ul.custom-discs li::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    height: 10px;
-    width: 10px;
-    background-color: white;
-    border-radius: 50%;
-}  
-
-ul > .contact-button{
-    background-color: white;
-    border: none;
-    width: 100px;
-    height: 40px;
-    color: var(--secondary);
-    border-radius: 3px;
-}
-
 section{
     min-height: 100vh;
 }
@@ -143,11 +85,13 @@ section{
 
 .image{
     position: relative;
+    left: 0;
+    width: 1300px;
 }
 
 .description .svg{
     position: absolute;
-    right: 0;
+    right: -60px;
     top: -20px;
     z-index: -1;
 }
@@ -282,6 +226,8 @@ section{
     display: flex;
     flex-direction: column;
     gap: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 .project__header {
@@ -292,19 +238,39 @@ section{
     flex-direction: column;
     gap: 20px;
 }
+
+.project1 { grid-area: project1; }
+.project2 { grid-area: project2; }
+.project3 { grid-area: project3; }
+.project4 { grid-area: project4; }
+.project5 { grid-area: project5; }
+.project6 { grid-area: project6; }
+
 .project__items{
-    padding: 0 200px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
     justify-content: center;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-.project__items .item > img{
-    height: 250px;
+.project__items img{
+    height: 224px;
+    object-fit: cover;
 }
 
+.container {
+    display: flex;
+    gap: 20px;
+ }
+  
+.top-row {
+    grid-template-areas: "project1 project2 project3";
+}
+  
+.bottom-row {
+    grid-template-areas: "project4 project5 project5 project6 project6";
+}
 .project__description{
     display: flex;
     align-items: center;
@@ -324,101 +290,4 @@ section{
     justify-content: center;
     text-align: left;
     gap: 50px;
-}
-
-.footer{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-
-.footer ul{
-    list-style: none;
-}
-
-.subscription{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    padding: 0 200px;
-}
-
-.subscription__box{
-    display: flex;
-    position: relative;
-    background-color: var(--footer);
-    color: var(--white);
-    height: 200px;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 15px;
-}
-
-.box__input {
-    position: relative;
-    font-family: Arial, sans-serif;
-}
-  
-.box__input input[type="email"] {
-    padding: 15px 25px 15px 15px;
-    font-size: 12px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-    width: 250px;
-    padding-right: 80px;
-}
-  
-.box__input button {
-    position: absolute;
-    top: 6.5px;
-    right: 6px;
-    padding: 10px 20px;
-    border: none;
-    background-color: #ffa500;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    outline: none;
-}
-  
-.box__input input[type="email"]:focus {
-    border-color: #ffa500;
-}
-
-.box__input input[type="email"]::placeholder {
-  font-size: 12px;
-  text-align: left;
-}
-  
-.box__input button:hover {
-    background-color: #ff8700;
-}
-
-.footer__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--footer);
-    color: var(--white);
-    padding: 50px 100px;
-}
-
-.footer__content > * {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.footer__content > * ul {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.social__media{
-    margin-top: 100px;
-    display: flex;
-    flex-direction: row;
-    align-self: end;
 }
