--- a/index.css
+++ b/index.css
@@ -144,7 +144,6 @@
 .card {
     background-color: #fff;
     border-radius: 16px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 280px;
     display: flex;
     flex-direction: column;
@@ -154,7 +153,7 @@
 }
 
 .card .label {
-    padding: 2px;
+    padding: 2px 15px;
     font-size: 1rem;
     margin-bottom: 16px;
     width: fit-content;
