--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    /* outline: 1px solid black; */
+    overflow-x: hidden;
 }
 
 .pre{
