--- a/style.css
+++ b/style.css
@@ -30,3 +30,18 @@
 section{
     min-height: 100vh;
 }
+
+.btn-primary{
+    background-color: var(--secondary);
+    width: 175px;
+    height: 50px;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.1s ease;
+}
+
+.btn-primary:active{
+    background-color: #7d3f00;
+}
