--- a/index.css
+++ b/index.css
@@ -98,6 +98,7 @@
     align-items: center;
     gap: 50px;
     width: 100%;
+    padding: 0 var(--padding-100);
 }
 
 .service__items > :nth-child(5) {
