--- a/about.css
+++ b/about.css
@@ -3,7 +3,7 @@
 }
 
 .left, .right{
-    width: 50%;
+    width: 50vw;
     height: 70vh;
     position: relative;
 }
@@ -24,23 +24,31 @@
     color: #E47500 ;
 }
 
-.hero-carousel{
-    display: flex;
-    overflow-x: auto;
-    height: 100%;
-    width: 200%;
-}
-
-.hero-carousel-item{
-    width: inherit;
-    height: inherit;
+.right {
+    height: 70vh;
     position: relative;
-    /* overflow-y: hidden; */
+    overflow: hidden;
 }
 
-.hero-carousel-item img{
+.hero-carousel {
+    overflow-x: auto;
+    overflow-x: hidden;
+    white-space: nowrap;
+    scroll-behavior: smooth;
+}
+
+.hero-carousel-item {
+    display: inline-block;
     width: 100%;
-    height: 100%;
+    box-sizing: border-box;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-carousel-item img {
+    width: 100%;
+    height: auto; 
     object-fit: cover;
 }
 
@@ -51,4 +59,77 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
+}
+
+.about-background{
+    padding: var(--padding-100);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap: 300px;
+}
+
+.cards-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+}
+
+.card{
+    padding: var(--padding-card);
+    width: 380px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    background-color: #F5F5F5;
+    gap: 50px;
+    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.1);   
+    border-radius: 20px;
+    transition: all 0.3s ease;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    background-color: white;
+}
+
+.card .card-title{
+    font-size: 15px;
+    font-weight: 600;
+    padding: 5px 10px;
+    border-radius: 8px;
+
+}
+
+.card p {
+    font-size: 14px;
+}
+
+.team-background{
+    padding: var(--padding-100);
+    display: flex;
+}
+
+.team-image{
+    width: 50%;
+    height: 500px;
+    background-color: #F5F5F5;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-image img{
+    align-items: center;
+    justify-content: center;
+    object-position: center;
+}
+
+.team-description{
+    width: 50%;
+    height: 500px;
 }
