--- a/navbar.css
+++ b/navbar.css
@@ -1,7 +1,9 @@
 nav {
-    display: flex;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
+    left: 0;        
+    display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: var(--secondary);
