--- a/services.css
+++ b/services.css
@@ -10,6 +10,9 @@
 .hero-location{
     display: flex;
 }
+.hero-location:nth-child(1){
+    white-space: pre-wrap;
+}
 
 .achievements{
     display: flex;
