--- a/about.css
+++ b/about.css
@@ -1,5 +1,7 @@
 .hero{
     display: flex;
+    min-height: 50vh;
+    padding-bottom: var(--padding-100);
 }
 
 .left, .right{
@@ -14,9 +16,6 @@
     flex-direction: column;
     justify-content: space-around;
     padding: var(--padding-100);
-}
-.hero-location > p:nth-child(2){
-    color: #E47500 ;
 }
 
 .right {
@@ -58,12 +57,13 @@
 }
 
 .about-background{
-    padding: var(--padding-100);
+    padding:var(--padding-100);
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
-    gap: 300px;
+    justify-content: start;
+    gap: 100px;
+    min-height: 50vh;
 }
 
 .cards-container{
