--- a/footer.css
+++ b/footer.css
@@ -26,6 +26,11 @@
     justify-content: space-between;
     padding: 0 var(--padding-100);
     border-radius: 10px;
+    gap: 50px;
+}
+
+.box__text {
+    width: 50%;
 }
 
 .box__input {
@@ -107,9 +112,35 @@
     padding: var(--padding-card);
 }
 
+@media (max-width: 1280px) {
+    .footer__content{
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        justify-content: space-between;
+        gap: 50px;
+    }
+}
+
 @media (max-width:1024px){
+    .subscription__box{
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .box__text{
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
 }
 @media (max-width:768px){
+    footer{
+
+        font-size: 12px;
+    }
     .footer__content{
         display: none;
     }
@@ -119,13 +150,12 @@
     }
 
     .subscription__box{
-        font-size: 12px;
-        flex-direction: column;
         justify-content: space-around;
     }
 
     .box__text{
         padding: 0 10px;
+        width: 100%;
     }
 
     .footer__content .context, .contact__us{
@@ -142,9 +172,34 @@
         margin-top: 0;
     }
 }
+@media (max-width: 600px) {
+    footer{
+        --padding-100: 20px;
+    }
+    .subscription__box{
+        padding: 0;
+    }
+}
 @media (max-width:430px){
     .subscription__box{
         flex-direction: column;
+    }
+
+    .box__input{
+        flex-direction: column;
+        background-color: transparent;
+        gap: 5px;
+        width: auto;
+    }
+
+    .box__input input[type="email"]{
+        border-radius: 5px;
+        width: 80vw;
+    }
+
+    .box__input button{
+        position: relative;
+        width: 80vw;
     }
 
     .footer__content{
