--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,33 @@
+@media (max-width: 1600px){
+}
+
 @media (max-width:1366px){
     .hero .left, .hero .right{
-        height: 100vh;;
+        height: 100vh;
+    }
+
+    .news-content{
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .news-content .left, .news-content .right{
+        width: 80vw;
+        align-self: center;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .news-content .left img{
+        width: 80vw;
+        height: 100%;
+    }
+
+    .news-thumbnail{
+        justify-content: flex-start;
+        padding: 0;
+        width: 100%;
     }
 }
 
@@ -174,11 +201,6 @@
         gap: 50px;
     }
 
-    .news-content{
-        flex-direction: column;
-        gap: 50px;
-    }
-
     .news-content > .right > .news-thumbnail{
         padding: 0;
         gap: 50px;
@@ -233,8 +255,6 @@
     .search-bar img{
         width: 5%;
     }
-
-
 
     .left img{
         width: 80vw;
@@ -369,7 +389,7 @@
     .how-to-contact > .contact-detail{
         width: 80vw;
         align-items: center;
-        justify-content: center;
+        justify-content: center;/
     }
     .how-to-contact > .contact-detail:first-child{
         flex-direction: column-reverse;
